build-err.log
npm warn Unknown project config "public-hoist-pattern". This will stop working in the next major version of npm.
C:\Users\DELL\OneDrive\Desktop\Portfoilio 2.0\piyush.in\src\scripts\build-registry.mts:8
import { registry } from "../registry/index.ts";
         ^

SyntaxError: The requested module '../registry/index.ts' does not provide an export named 'registry'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.19.0
